[gd_scene load_steps=7 format=2]

[ext_resource path="res://Rocket Launch Resources/RocketShip.png" type="Texture" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://Rocket Launch Resources/LaunchButton.png" type="Texture" id=3]
[ext_resource path="res://title.png" type="Texture" id=4]
[ext_resource path="res://small_steps.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Launch"
tracks/0/type = "value"
tracks/0/path = NodePath("RocketShip:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 620 ), Vector2( 640, -112 ) ]
}

[node name="World" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RocketShip" type="Sprite" parent="."]
position = Vector2( 640, 620 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Launch = SubResource( 1 )

[node name="LaunchButton" type="TextureButton" parent="."]
margin_left = 774.0
margin_top = 599.0
margin_right = 822.0
margin_bottom = 615.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Sprite" parent="."]
position = Vector2( 640, 120 )
scale = Vector2( 1, 1.2 )
texture = ExtResource( 4 )

[node name="SmallStepsSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.7
mix_target = 2
[connection signal="pressed" from="LaunchButton" to="." method="_on_LaunchButton_pressed"]
